# notion-data

./: .copier-answers.yml  .gitignore  README.md  catalog-info.yaml  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: _test.yml  ci.yml
demo/: get_child_block.py
src/notion_data/: __main__.py  block.py  dynamic.py  enums.py  file.py  helpers.py  identify.py  mention.py  page.py  parent.py  regex.py  rich_text.py  root.py  simple.py
src/notion_data/helpers/: api.py  blocks.py  properties.py
src/notion_data/types/: file.py  mention.py  model.py  parent.py  rich_text.py  simple.py
src/notiondata/: __main__.py  block.py  parent.py
tests/: conftest.py  test_cli.py  test_deserial.py
tests/data/: block.json  bookmark.json  breadcrumb.json  code.json  file.json  page.json  page1.json  page2.json  paragraph.json  synced_from.json  synced_to.json  table.json
tests/test_system/: test_blocks.py  test_pages.py  test_workflow.py
tests/test_unit/: test_deserial.py
